# vgi-calendar

./: CLAUDE.md  Dockerfile  Makefile  README.md  calendar_worker.py  conftest.py  docker-entrypoint.sh  pyproject.toml  vgi-lint.toml
.github/workflows/: ci.yml  docker-publish.yml  release.yml
ci/: README.md  run-integration.sh
test/sql/: business_days.test  holidays.test  recurrence.test  trading.test
tests/: test_client.py  test_core.py  test_scalars.py  test_tables.py  test_trading.py
vgi_calendar/: __init__.py  core.py  meta.py  scalars.py  schema_utils.py  tables.py  trading.py  trading_scalars.py  trading_tables.py  worker.py
