[project]
name = "vgi-calendar"
version = "0.1.0"
description = "Holiday, business-day, recurrence, and trading-calendar math for DuckDB via VGI"
readme = "README.md"
keywords = [
    "duckdb",
    "apache-arrow",
    "vgi",
    "sql",
    "holidays",
    "business-days",
    "rrule",
    "recurrence",
    "calendar",
    "trading-calendar",
    "exchange-calendars",
    "market-hours",
]
license = { file = "LICENSE" }
authors = [{ name = "Query Farm LLC", email = "hello@query.farm" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Database",
    "Topic :: Office/Business :: Scheduling",
    "Typing :: Typed",
]
requires-python = ">=3.13"
dependencies = [
    "vgi-python>=0.9.0",
    "holidays>=0.50",
    "python-dateutil>=2.9",
    "exchange-calendars>=4.5",
    "pyarrow",
]

[project.optional-dependencies]
# HTTP transport: the worker can serve over HTTP (`calendar_worker.py --http`)
# in addition to stdio. That path needs vgi-python's `http` extra (waitress).
# CI's http transport leg installs this via `uv sync --extra http`.
http = [
    "vgi-python[http]>=0.9.0",
]
dev = [
    "pytest>=8",
    "ruff>=0.5",
    "mypy>=1.10",
    "pydoclint>=0.5",
    "types-python-dateutil",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vgi_calendar"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "D"]

[tool.ruff.lint.per-file-ignores]
# Docstrings (D) are enforced on the worker package/script (product code), not tests.
"tests/**" = ["D"]
# The PEP 723 inline-script header wraps dependency pins that should stay one-per-line.
"calendar_worker.py" = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"

[tool.pydoclint]
# Docstring consistency gate (complements ruff's D rules: ruff checks docstring
# shape, pydoclint checks documented args/returns/attrs match the code).
style = "google"
arg_type_hints_in_docstring = false
check_return_types = false
check_yield_types = false
check_class_attributes = true
skip_checking_raises = true
allow_init_docstring = true

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
# Untyped third-party libraries (no stubs published).
module = ["exchange_calendars.*", "pandas.*"]
ignore_missing_imports = true
